--- a/HTML-CSS/module_04/index.html
+++ b/HTML-CSS/module_04/index.html
@@ -12,20 +12,21 @@
     <title>Домашка Серёжи 4</title>
 </head>
 <body>
-    <header class="clearfix">
+    <div class="wrapper">
+        <header class="clearfix">
             <a href="#"><p class="logo">mart</p></a>
-        <nav class="clearfix">
+            <nav class="clearfix">
            
-            <ul class="clearfix">
-            <li><a href="#">home</a></li>
-            <li><a href="#">about us</a></li>
-            <li><a href="#">page</a></li>
-            <li><a href="#">shop</a></li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">contact us</a></li>
-            </ul>
-        </nav>    
-</header>
+                <ul class="clearfix">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">page</a></li>
+                <li><a href="#">shop</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">contact us</a></li>
+                </ul>
+            </nav>    
+        </header>
 
 <main>
 <article>
@@ -171,5 +172,6 @@
    
 </section>
 </main>
+</div>
 </body>
 </html>
