--- a/HTML-CSS/module_05/index1.html
+++ b/HTML-CSS/module_05/index1.html
@@ -48,7 +48,7 @@
                                     <button class="card"><span class="pe-7s-clock"></span><span class="visually-hidden">later</span></button>
                                     <button class="card"><span class="pe-7s-cart"></span><span class="visually-hidden">buy</span><span class="add">ADD TO CART</span></button>
                                 </div>
-                                <img src="img/category-2.jpeg" alt="boy" width=255px height=281px>
+                                <img src="img/category-2.jpeg" alt="boy" width="255" height="281">
                             </div>
                             <div class="left">
                             <p>blue tshirt</p>
@@ -67,7 +67,7 @@
                                             <button class="card"><span class="pe-7s-clock"></span><span class="visually-hidden">later</span></button>
                                             <button class="card"><span class="pe-7s-cart"></span><span class="visually-hidden">buy</span><span class="add">ADD TO CART</span></button>
                                         </div>
-                                <img src="img/category-1.jpeg" alt="girl" width=255px height=281px>
+                                <img src="img/category-1.jpeg" alt="girl" width="255" height="281">
                             </div>
                             <div class="left">
                             <p>woman shirt</p>
@@ -86,7 +86,7 @@
                                             <button class="card"><span class="pe-7s-clock"></span><span class="visually-hidden">later</span></button>
                                             <button class="card"><span class="pe-7s-cart"></span><span class="visually-hidden">buy</span><span class="add">ADD TO CART</span></button>
                                         </div>
-                                <img src="img/category-4.jpeg" alt="man in yellow" width=255px height=281px>
+                                <img src="img/category-4.jpeg" alt="man in yellow" width="255" height="281">
                             </div>
                             <div class="left">
                             <p>yellow tshirt</p>
@@ -105,7 +105,7 @@
                                             <button class="card"><span class="pe-7s-clock"></span><span class="visually-hidden">later</span></button>
                                             <button class="card"><span class="pe-7s-cart"></span><span class="visually-hidden">buy</span><span class="add">ADD TO CART</span></button>
                                         </div>
-                                <img src="img/category-3.jpeg" alt="fat woman" width=255px height=281px>
+                                <img src="img/category-3.jpeg" alt="fat woman" width="255" height="281">
                             </div>
                             <div class="left">
                             <p>cool lingerie</p>
