--- a/HTML-CSS/module_07/index.html
+++ b/HTML-CSS/module_07/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
     <header>
-        <a href="#" class="logo">Golden</a>
+        <a href="#" class="logo"><img src="img/logo.jpg" alt="Golden"></a>
         <nav>
             <ul class="menu">
                 <li class="menu-items"><a href="#" class="menu-items-ref">home</a></li>
@@ -38,13 +38,15 @@
     <div class="map"></div>
     <h3 class="title white">Contact us</h3>
     <p class="cont-sub-title">Proin iaculis purus consequat sem cure.</p>
-    <form action="#" method="GET" data-ng-submit="">
+    <form action="#" method="GET">
         <input type="text" name="name" required placeholder="YOUR NAME*" class="name">
         <input type="email" name="email" required placeholder="YOUR E-MAIL*" class="email">
         <input type="text" name="subject" placeholder="SUBJECT" class="subject">
-        <textarea name="message" required placeholder="YOUR MESSAGE*" cols="30" rows="7"></textarea>
+        <button type="submit"  class="submit">SEND MESSAGE</button>
+        <textarea name="message" required placeholder="YOUR MESSAGE*" cols="10" rows="10"></textarea>
+        <!--<button type="submit"  class="submit">SEND MESSAGE</button>!-->
+
     </form>
-    <input type="submit" value="SEND MESSAGE" class="submit">
 </div>
 </body>   
 </html>     
